# Vue3-Migration

./: .gitignore  .npmignore  ARCHITECTURE.md  CLAUDE.md  EVALUATION-CONTEXT.md  README.md  component_migrate.py  migrate.py  migration-diff-20260303-205941.md  migration-diff-20260303-211624.md  migration-diff-20260304-020930.md  migration-diff-20260304-021157.md  migration-diff-20260304-022032.md  migration-status-20260303-205553.md  migration-status-20260304-012107.md  migration_MultiMixin.md  mixin_audit.py  mixin_audit_selectionMixin.md  package.json  pyproject.toml  tool-evaluation.md
issues/: issue-lifecycle-already-converted.md  issue-missing-composable-files.md  issue-sort-reactivity-bug.md  issue-string-literal-false-positives.md  issue-syntax-error-in-generated-code.md  issue-watch-array-handlers.md
tests/: CONSOLIDATION_PLAN.md  conftest.py  test_auto_migrate_workflow.py  test_cli_auto_migrate.py  test_cli_auto_migrate_scoped.py  test_cli_menu.py  test_cli_workflows.py  test_component_analyzer.py  test_composable_analyzer.py  test_composable_generator.py  test_composable_patcher.py  test_composable_search.py  test_cross_flow_consistency.py  test_diff.py  test_diff_reporting.py  test_divergence_detector.py  test_file_resolver.py  test_file_utils.py  test_idempotency.py  test_injector_lifecycle.py  test_integration.py  test_integration_auto_migrate.py  test_integration_new_fixtures.py  test_js_parser.py  test_lifecycle_converter.py  test_markdown.py  test_mixin_analyzer.py  test_parser_fixes.py  test_status_report.py  test_this_dollar.py  test_this_i18n.py  (+4 more)
(+191 files in other folders)
